[package]
name = "vlist"
version = "0.1.0"
authors = ["fyr <ohAitch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
slice-of-array = "0.2.1"
matches = "0.1.9"
arrayvec = "0.7.1"
bitvec = "0.22.3"
